--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -7,13 +7,6 @@
       <span class="md:before:content-['|'] md:before:mx-4"
         >{{ recipes?.length || 0 }} componentes</span
       >
-      <!-- <button
-        type="button"
-        (click)="onCreate()"
-        class="btn btn-primary shadow-thick-secondary"
-      >
-        <fa-icon [icon]="faPlus"></fa-icon>
-      </button> -->
     </div>
   </div>
   <div
@@ -29,10 +22,6 @@
             [(ngModel)]="searchTerm"
             (keyup)="search()"
           />
-          <!-- <fa-icon
-            [icon]="faSearch"
-            class="absolute top-2 right-0 px-4 fa-2x text-basic-900"
-          ></fa-icon> -->
         </div>
         <div class="w-full md:w-[90%]">
           <app-properties-list [filtering]="true"></app-properties-list>
@@ -43,14 +32,16 @@
       class="w-full md:w-[70%] lg:w-[80%] mx-auto my-0 h-fit grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5"
     >
       <div
-        class="flex flex-col justify-center hover:border-secondary-800 text-center border-2 border-dashed rounded-lg border-secondary-400 bg-basic-900 p-4 m-2 relative cursor-pointer bg-transparent"
+        class="group flex flex-col justify-center border-2 border-dashed rounded-lg p-4 m-2 relative cursor-pointer text-center hover:opacity-50 border-secondary-300 bg-basic-900 dark:bg-secondary-400"
         (click)="onCreate()"
       >
         <fa-icon
           [icon]="faPlus"
-          class="fa-2x text-secondary-500 group-hover:text-secondary-700"
+          class="fa-2x text-secondary-300 dark:text-basic-700"
         ></fa-icon>
-        <h4 class="text-secondary-500 group-hover:text-secondary-700">
+        <h4
+          class="text-secondary-300 dark:text-basic-700"
+        >
           Formular
         </h4>
       </div>
