--- a/frontend/src/app/shared/components/dashed-box/dashed-box.component.html
+++ b/frontend/src/app/shared/components/dashed-box/dashed-box.component.html
@@ -1,4 +1,7 @@
-<div #container class="w-full p-4 relative group cursor-pointer">
+<div
+  #container
+  class="w-full p-4 relative group cursor-pointer hover:opacity-80"
+>
   <div
     #borderTop
     class="absolute top-0 right-0 w-full h-[10px] bg-[length:4px_10px] bg-repeat-x"
