--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<span class="text-danger" id="workplease"></span>
 <div class="flex flex-col min-h-screen">
   <app-feedback></app-feedback>
   <app-header></app-header>
