--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -1,38 +1,40 @@
-<div class="m-auto text-center maxw-500">
+<div class="m-auto text-center maxw-500 pb-6">
   <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-basic-600">
-    <h2 class="text-2xl uppercase my-5">Forgot password</h2>
-    <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" class="mt-10">
-      <div class="my-5 custom-input-labeled">
-        <input
-          type="email"
-          [formControl]="email"
-          aria-label="Email"
-          placeholder="Email"
-        />
-        <label for="email">Email</label>
-
-        <div *ngIf="email.errors" class="mt-2 mb-2form-errors">
-          <span *ngIf="email.errors && (email.touched || email.dirty)">
-            <span *ngIf="email.errors.required">Email is required</span>
-            <div *ngIf="email.errors.pattern">Email not a valid format.</div>
-          </span>
+    <h2 class="text-2xl uppercase my-2 dark:text-secondary-500">
+      Recuperar contraseña
+    </h2>
+    <form
+      [formGroup]="forgotPasswordForm"
+      (ngSubmit)="onSubmit()"
+      class="mt-10"
+    >
+      <div class="custom-input-labeled-container">
+        <div class="custom-input-labeled">
+          <input type="email" [formControl]="email" aria-label="Email" />
+          <label for="email">Correo electrónico</label>
+        </div>
+        <div
+          *ngIf="email.errors && (email.touched || email.dirty)"
+          class="form-errors"
+        >
+          <span *ngIf="email.errors.required">Email is required</span>
+          <div *ngIf="email.errors.pattern">Email not a valid format.</div>
         </div>
       </div>
 
       <button
         type="submit"
         [disabled]="!forgotPasswordForm.valid"
-        class="btn btn-primary shadow-thick-secondary"
+        class="btn btn-primary shadow-thick-secondary mt-2"
       >
         Enviar email
       </button>
     </form>
   </div>
-</div>
-
-<div class="text-center">
-  <p>
+  <p class="text-wrap">
     ¿Te acordaste de tu contraseña?
-    <a [routerLink]="['/login']" class="text-primary-500 hover:text-primary-700">Inicia sesión</a>
+    <a [routerLink]="['/login']" class="text-primary-500 hover:text-primary-700"
+      >Inicia sesión</a
+    >
   </p>
 </div>
