--- a/frontend/src/app/auth/components/login/login.component.html
+++ b/frontend/src/app/auth/components/login/login.component.html
@@ -1,53 +1,40 @@
-<div class="m-auto text-center maxw-500">
+<div class="m-auto text-center maxw-500 pb-6">
   <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-basic-600">
-    <h2 class="text-2xl uppercase my-5">Login</h2>
+    <h2 class="text-2xl uppercase my-2 dark:text-secondary-500">Login</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="mt-10">
-      <div class="my-5 custom-input-labeled">
-        <input
-          type="email"
-          [formControl]="email"
-          aria-label="Email"
-          placeholder="Email"
-        />
-        <label for="name" class="text-primary-500">Nombre</label>
-        <div *ngIf="email.errors" class="mt-2 mb-2 form-errors">
-          <span
-            *ngIf="email.errors && (email.touched || email.dirty)"
-          >
-            <span *ngIf="email.errors.required"
-              >Email is required</span
-            >
-            <div *ngIf="email.errors.pattern">
-              Email not a valid format.
-            </div>
-          </span>
+      <div class="custom-input-labeled-container">
+        <div class="custom-input-labeled">
+          <input type="email" [formControl]="email" aria-label="Email" />
+          <label for="name">Nombre</label>
+        </div>
+        <div
+          *ngIf="email.errors && (email.touched || email.dirty)"
+          class="form-errors"
+        >
+          <span *ngIf="email.errors.required">Email is required</span>
+          <div *ngIf="email.errors.pattern">Email not a valid format.</div>
         </div>
       </div>
-
-      <div class="my-5 custom-input-labeled">
-        <input
-          type="password"
-          [formControl]="password"
-          class=""
-          aria-label="Password"
-          placeholder="Password"
-        />
-        <label for="password" class="">Contraseña</label>
-        <div *ngIf="password.errors" class="mt-2 mb-2 form-errors">
-          <span
-            class=""
+      <div class="custom-input-labeled-container">
+        <div class="custom-input-labeled">
+          <input
+            type="password"
+            [formControl]="password"
+            aria-label="Password"
+          />
+          <label for="password">Contraseña</label>
+          <div
             *ngIf="password.errors && (password.touched || password.dirty)"
+            class="form-errors"
           >
-            <span *ngIf="password.errors.required"
-              >Password is required</span
-            >
+            <span *ngIf="password.errors.required">Password is required</span>
             <span *ngIf="password.errors.minlength"
               >Password must be greater tha 8 characters</span
             >
             <span *ngIf="password.errors.maxlength"
               >Password can be max 16 characters long</span
             >
-          </span>
+          </div>
         </div>
       </div>
 
@@ -61,17 +48,18 @@
       <button
         type="submit"
         [disabled]="!loginForm.valid"
-        class="mr-2 btn btn-primary shadow-thick-secondary"
+        class="mr-2 btn btn-primary shadow-thick-secondary mt-2"
       >
         Login
       </button>
     </form>
   </div>
-</div>
-
-<div class="text-center">
-  <p>
+  <p class="text-center">
     ¿Nuevo en Mesta?
-    <a [routerLink]="['/register']" class="text-primary-500 hover:text-primary-700">Regístrate</a>
+    <a
+      [routerLink]="['/register']"
+      class="text-primary-500 hover:text-primary-700"
+      >Regístrate</a
+    >
   </p>
 </div>
