--- a/frontend/src/app/auth/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/components/reset-password/reset-password.component.html
@@ -1,17 +1,21 @@
-<div class="m-auto text-center maxw-500">
+<div class="m-auto text-center maxw-500 pb-6">
   <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-basic-600">
-    <h2 class="text-2xl uppercase my-5">Cambiar contraseña</h2>
+    <h2 class="text-2xl uppercase my-2 dark:text-secondary-500">
+      Cambiar contraseña
+    </h2>
     <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()" class="mt-10">
-      <div class="my-5 custom-input-labeled">
-        <input
-          type="password"
-          [formControl]="password"
-          aria-label="Password"
-          placeholder="Password"
-        />
-        <label for="password" class="text-primary-500">Contraseña</label>
-        <div *ngIf="password.errors" class="mt-2 mb-2 form-errors">
-          <span *ngIf="password.errors && (password.touched || password.dirty)">
+      <div class="custom-input-labeled-container">
+        <div class="custom-input-labeled">
+          <input
+            type="password"
+            [formControl]="password"
+            aria-label="Password"
+          />
+          <label for="password">Contraseña</label>
+          <div
+            *ngIf="password.errors && (password.touched || password.dirty)"
+            class="form-errors"
+          >
             <span *ngIf="password.errors.required">Password is required</span>
             <span *ngIf="password.errors.minlength"
               >Password must be greater tha 8 characters</span
@@ -19,25 +23,24 @@
             <span *ngIf="password.errors.maxlength"
               >Password can be max 16 characters long</span
             >
-          </span>
+          </div>
         </div>
       </div>
+      <div class="custom-input-labeled-container">
+        <div class="custom-input-labeled">
+          <input
+            type="password"
+            [formControl]="password_confirmation"
+            aria-label="Password"
+          />
+          <label for="password_confirmation">Repetir contraseña</label>
 
-      <div class="my-5 custom-input-labeled">
-        <input
-          type="password"
-          [formControl]="password_confirmation"
-          aria-label="Password"
-          placeholder="Password confirmation"
-        />
-        <label for="password_confirmation">Repetir contraseña</label>
-
-        <div *ngIf="password_confirmation.errors" class="mt-2 mb-2 form-errors">
-          <span
+          <div
             *ngIf="
               password_confirmation.errors &&
               (password_confirmation.touched || password_confirmation.dirty)
             "
+            class="form-errors"
           >
             <span *ngIf="password_confirmation.errors.required"
               >Password is required</span
@@ -48,14 +51,14 @@
             <span *ngIf="password_confirmation.errors.maxlength"
               >Password can be max 16 characters long</span
             >
-          </span>
+          </div>
         </div>
       </div>
 
       <button
         type="submit"
         [disabled]="!resetPasswordForm.valid"
-        class="btn btn-primary shadow-thick-secondary"
+        class="btn btn-primary shadow-thick-secondary mt-2"
       >
         Cambiar contraseña
       </button>
