--- a/frontend/src/app/properties/components/property-item/property-item.component.html
+++ b/frontend/src/app/properties/components/property-item/property-item.component.html
@@ -1,8 +1,12 @@
 <div
-  class="rounded-full border-2 px-4 border-secondary-500 text-secondary-500 dark:border-basic-500 dark:text-basic-500 h-[100%]"
+  class="rounded-full border-2 px-4 h-[100%] flex flex-row align-items-center"
   [ngClass]="{
-    'text-basic-500 bg-secondary-500 dark:bg-basic-500 dark:text-secondary-500': selected,
+    'text-basic-500 bg-secondary-500 dark:bg-primary-500 border-none':
+      selected,
+    ' border-secondary-500 text-secondary-500 dark:border-primary-500 dark:text-basic-500':
+      !selected,
     'hover:text-basic-500 hover:bg-secondary-500': !editing,
+    'hover:dark:text-primary-500': !editing && !selected,
     'cursor-pointer': allowEdition
   }"
   (click)="select()"
@@ -11,11 +15,21 @@
     *ngIf="editing"
     contenteditable="true"
     (input)="onPropertyChange($event)"
-    class="outline-none underline underline-offset-2 h-[100%] text-sm"
+    class="outline-none underline underline-offset-2 self-center text-base sm:text-sm"
     >{{ property?.name }}</span
   >
-  <span *ngIf="!editing">{{ property?.name }}</span>
+  <span *ngIf="!editing" class="self-center">{{ property?.name }}</span>
 
-  <fa-icon (click)="onSaveEdition($event)" [icon]="faSave" class="ml-3 text-secondary-500 dark:text-basic-500 hover:text-primary-500" *ngIf="edited"></fa-icon>
-  <fa-icon (click)="onDeleteProperty($event)" [icon]="faTrash" class="ml-3 text-danger " *ngIf="editing" ></fa-icon>
+  <fa-icon
+    (click)="onSaveEdition($event)"
+    [icon]="faSave"
+    class="ml-3 text-secondary-500 dark:text-basic-500 hover:text-primary-500 text-3xl sm:text-base"
+    *ngIf="edited"
+  ></fa-icon>
+  <fa-icon
+    (click)="onDeleteProperty($event)"
+    [icon]="faTrash"
+    class="ml-3 text-danger text-3xl sm:text-base"
+    *ngIf="editing"
+  ></fa-icon>
 </div>
