--- a/frontend/src/app/shared/components/footer/footer.component.html
+++ b/frontend/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,40 @@
 <div class="w-full">
   <nav class="m-2">
-    <ul class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap">
+    <!-- NO AUTH -->
+    <ul *ngIf="!isLogged" class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap">
+      <li class="mx-1">
+        <a
+          class="text-sm text-basic-500 hover:text-primary-500"
+          (click)="navigate('register')"
+          >Registrarse</a
+        >
+      </li>
+      <li class="mx-1">
+        <a
+          class="text-sm text-basic-500 hover:text-primary-500"
+          (click)="navigate('login')"
+          >Iniciar sesión</a
+        >
+      </li>
+      <li class="mx-1">
+        <a
+          class="text-sm text-basic-500 hover:text-primary-500"
+          (click)="navigate('forgot-password')"
+          >Recuperar contraseña</a
+        >
+      </li>
+      <li class="mx-1">
+        <a
+          class="text-sm text-basic-500 hover:text-primary-500"
+          (click)="navigate('')"
+          >Contacto</a
+        >
+      </li>
+    </ul>
+
+
+    <!-- AUTH -->
+    <ul *ngIf="isLogged" class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap">
       <li class="mx-1">
         <a
           class="text-sm text-basic-500 hover:text-primary-500"
