--- a/frontend/src/app/shared/components/modal/modal.component.html
+++ b/frontend/src/app/shared/components/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div
   #popup
   id="popup"
-  class="z-10 fixed inset-0 bg-secondary-500/[.2] transition duration-500 transition-opacity invisible opacity-0"
+  class="z-10 fixed inset-0 bg-secondary-500/[.2] transition duration-500 transition-opacity invisible opacity-0 dark:text-secondary-500"
 >
   <div
     class="translate-y-2/4 mx-auto p-2 md:p-4 bg-basic-500 rounded-lg w-[90%] md:w-[50%] max-w-[400px] relative transition ease-in-out duration-500"
@@ -20,13 +20,13 @@
     <div class="flex flex-row justify-center gap-5 my-2">
       <button
         (click)="close(true)"
-        class="btn btn-primary shadow-thick-secondary"
+        class="btn btn-primary shadow-thick-secondary-dark"
         id="popup-on-proceed"
       >
         Continuar
       </button>
       <button
-        class="btn btn-outline-secondary shadow-thick-secondary"
+        class="btn btn-secondary-dark shadow-thick-secondary-dark"
         (click)="close()"
       >
         Cancelar
